crates/tests/databases-tests/src/aurora/snapshots/databases_tests__aurora__query_tests__aggregation__aggregate_count_albums.snap
---
source: crates/tests/databases-tests/src/aurora/query_tests.rs
expression: result
---
[
  {
    "aggregates": {
      "how_many_albums": 347,
      "how_many_artist_ids": 347,
      "how_many_distinct_artist_ids": 204,
      "min_artist_id": 1,
      "max_artist_id": 275,
      "avg_artist_id": 121.94236311239193
    }
  }
]
